--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -47,6 +47,7 @@
 }
 
 .card button {
+  border: none;
   background-color: lightskyblue;
   color: white;
   padding: 0.75rem 1.5rem;
@@ -54,4 +55,12 @@
   font-size: 1rem;
   cursor: pointer;
   transition: background-color 0.3s;
+}
+
+.card img {
+  width: 100%;
+  height: 180px;
+  object-fit: cover;
+  border-radius: 8px;
+  margin-bottom: 1rem;
 }
